samples/_failures_safe/1761146658_f1a2ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_143c7844.c: In function ‘main’:
./samples/SAFE/__tmp_143c7844.c:187:9: error: expected expression at end of input
  187 |         if (input[0] == 'u' && (input[1] ==
      |         ^~
./samples/SAFE/__tmp_143c7844.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_143c7844.c:187:9: error: expected declaration or statement at end of input
